too wide containers fixed

--- a/src/common.blocks/about-section/styl/about-section.styl
+++ b/src/common.blocks/about-section/styl/about-section.styl
@@ -27,6 +27,7 @@
 
   &__text
     flex 32.96703297rem 2 2
+    max-width 60.44rem
     padding 2rem
 
   &__intro
