--- a/src/common.blocks/talks-section/styl/talks-section.styl
+++ b/src/common.blocks/talks-section/styl/talks-section.styl
@@ -59,6 +59,7 @@
       font-size 1.1rem
   
   &__card
+    height 100%
     max-width 24.48406593rem
     min-width 14.29175824rem
 
