--- a/src/pages/contacts/styl/contacts.styl
+++ b/src/pages/contacts/styl/contacts.styl
@@ -8,6 +8,7 @@
   &__main
     flex 1 0 auto
     width 90%
+    max-width 54.9rem
     margin 5.494505495rem auto 2rem
 
   &__title
@@ -24,7 +25,6 @@
   &__form
     margin 2rem auto 0
     width 100%
-    max-width 41.20879121rem
 
   &__map
     margin 3rem auto 0
